V2: VF chat
